# i18n_scan_rust

./: Cargo.toml  README.md
src/: main.rs
