[package]
name = "i18n_scan_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version ="0.11.17", features = ["blocking", "json"] }
