[package]
name = "i18n_scan_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
arti-client = { version = "0.10.0", features = ["compression", "native-tls", "tokio", "onion-service-client"] }
arti-hyper = "0.10.1"
serde_json = "1.0.105"
hyper = "0.14.27"
tokio = "1.32.0"
tls-api = "0.9.0"
tls-api-openssl = "0.9.0"
tls-api-native-tls = "0.9.0"
hyper-tls = "0.5.0"
